objects/CS_PRM_UserRegistration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AllowCustomValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Custom Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AlwaysMandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Always Mandatory?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AppliedTo__c</fullName>
        <inlineHelpText>1 for User Registration Contact field
2 for User Registration Company field
3 for Complete Profile</inlineHelpText>
        <label>Applied To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieldLabel__c</fullName>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldSortOrder__c</fullName>
        <label>Field Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HiddenDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden Disabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MandatoryOnProfile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory On Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MappedField__c</fullName>
        <label>Mapped Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MappedObject__c</fullName>
        <label>Mapped Object</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skip_Validation_on_User_Reg_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Validation on User Reg Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_MigrationUniqueID__c</fullName>
        <description>Unique ID to be used by ODASEVA for synchronizing the records between environments</description>
        <externalId>true</externalId>
        <label>Migration Unique ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>PRM User Registration Field Map</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FieldLabel__c</columns>
        <columns>FieldSortOrder__c</columns>
        <columns>AppliedTo__c</columns>
        <columns>MappedObject__c</columns>
        <columns>MappedField__c</columns>
        <columns>AllowCustomValidation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>